fixing the navbar collapse for mobile

--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,13 @@ body,
 	padding-top: 70px;
 }
 
+
+.navbar-default .navbar-nav>.active>a, 
+.navbar-default .navbar-nav>.active>a:hover, 
+.navbar-default .navbar-nav>.active>a:focus {
+  font-weight: bold;
+}
+
 .past-job {
 	min-height: 20px;
 	padding: 5px 0;
@@ -12,6 +19,10 @@ body,
 .section-title,
 .position {
 	font-weight:bold;	
+}
+
+#contacts {
+  margin-bottom:304px;
 }
 
 dl {
